crates/edgedb_codegen/tests/snapshots/codegen__codegen_literals@case_13_set.snap
---
source: crates/edgedb_codegen/tests/codegen.rs
expression: "&content"
---
pub mod example {
	use ::edgedb_codegen::exports as e;
	#[doc = r" Execute the desired query."]
	#[cfg(feature = "query")]
	pub async fn query(
		client: &e::edgedb_tokio::Client,
	) -> core::result::Result<Vec<Output>, e::edgedb_errors::Error> {
		client.query(QUERY, &()).await
	}
	#[doc = r" Compose the query as part of a larger transaction."]
	#[cfg(feature = "query")]
	pub async fn transaction(
		conn: &mut e::edgedb_tokio::Transaction,
	) -> core::result::Result<Vec<Output>, e::edgedb_errors::Error> {
		conn.query(QUERY, &()).await
	}
	pub type Input = ();
	pub type Output = String;
	#[doc = r" The original query string provided to the macro. Can be reused in your codebase."]
	pub const QUERY: &str = "select {\"set\", \"of\", \"strings\"}";
}
